# truenas_pydiscovery

./: .gitignore  CLAUDE.md  PROTOCOLSPECS.md  README.md  pyproject.toml
.github/workflows/: build-test.yml
debian/: changelog  control  python3-truenas-pydiscovery.manpages  python3-truenas-pydiscovery.postinst  python3-truenas-pydiscovery.postrm  python3-truenas-pydiscovery.truenas-discoveryd.service  python3-truenas-pydiscovery.truenas-pydiscoveryd.service  rules  truenas-discoveryd.conf.example  truenas-pydiscoveryd.conf.example
debian/man/: mdns-browse.1  mdns-lookup.1  mdns-resolve.1  nbt-lookup.1  nbt-status.1  truenas-discovery-status.1  truenas-discoveryd-service.conf.5  truenas-discoveryd.8  truenas-discoveryd.conf.5  truenas-pydiscoveryd-service.conf.5  truenas-pydiscoveryd.8  truenas-pydiscoveryd.conf.5  wsd-discover.1  wsd-info.1
src/truenas_pydiscovery/: __init__.py  composite.py  config.py
src/truenas_pydiscovery_utils/: composite.py  daemon.py  entry_point.py  interface_tokens.py  logger.py  netlink_addr.py  status.py
src/truenas_pymdns/: README.md
src/truenas_pynetbiosns/: README.md
src/truenas_pywsd/: README.md
tests/integration/: conftest.py  test_config_reload.py  test_mdns_conflict.py  test_mdns_integration.py  test_mdns_services.py  test_nbns_defense.py  test_netbiosns_integration.py  test_wsd_integration.py
tests/mdns/: test_announcer.py  test_cache_lru_poof.py  test_cache_stats.py  test_client_browser.py  test_client_query.py  test_client_query_unit.py  test_config.py  test_cooperating_responders.py  test_core.py  test_goodbye.py  (+26 more)
(+129 files in other folders)
